fixed overflow error

--- a/client/stylesheets/nav.css
+++ b/client/stylesheets/nav.css
@@ -22,4 +22,5 @@
 
 #notifications-dropdown {
 	max-height: 250px;
+	overflow: auto;
 }
